--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "fix-paths": "node scripts/fix-paths.js",
+    "build:gh-pages": "vite build && npm run fix-paths",
     "preview": "vite preview",
     "update-players": "node scripts/dataMerger.js",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build:gh-pages && gh-pages -d dist"
   },
   "dependencies": {
     "csv-parse": "^5.5.3",
